Changed license to WTFPLv2. Added login form and controllers abstraction. Few minor changes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,15 @@
     margin-bottom: 5px;
 }
 
+.login-form {
+    margin: auto;
+    text-align: center;
+}
+
+.login-button {
+    background-color: black;
+}
+
 @media (min-width: 720px) {
     .container {
         width: 70%;
