Added logos for social sites. Added links to my profiles on navigation bar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,12 @@ article {
     }
 }
 
+.social-link {
+    float: right;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.pure-menu-list {
+    width: 100%;
+}
