--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,9 +20,8 @@ body {
 }
 
 .header__logo {
-    max-width: 100%;
-    height: auto;
-    width: auto;
+    width: 100%;
+    margin: 0 5%;
 }
 
 .navigation__social-links {
