--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,6 @@ body {
     margin: 0 auto;
 }
 
-@media all and (min-width: 720px) {
-    .container {
-        width: 70%;
-    }
-}
-
 .header {
     display: flex;
     align-items: center;
@@ -39,9 +33,10 @@ body {
 }
 
 .navigation__toggle-menu-button {
-    width: 100%;
+    width: 90%;
     height: 30px;
-    display: none;
+    display: block;
+    margin: 0 5%;
 }
 
 .navigation__menu {
@@ -49,22 +44,17 @@ body {
     padding: 0;
     list-style: none;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
-@media all and (max-width: 719px) {
-    .navigation__menu {
-        justify-content: center;
-    }
+.navigation__menu--hide-vertical {
+    display: none;
 }
 
 .navigation__menu-item {
     padding: 5px 15px;
-}
-
-.navigation__menu--vertical {
-    flex-direction: column;
-    align-items: center;
 }
 
 .navigation__menu-item:hover {
@@ -186,3 +176,28 @@ body {
     margin: 0 auto;
 }
 
+@media all and (min-width: 701px) {
+    .container {
+        width: 70%;
+    }
+
+    .navigation__menu {
+        justify-content: flex-start;
+    }
+}
+
+@media all and (min-width: 401px) {
+    .navigation__toggle-menu-button {
+        display: none;
+    }
+
+    .navigation__menu {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    .navigation__menu--hide-vertical {
+        display: flex;
+    }
+}
